standard-page-xr.css
.h5p-standard-page-xr {
  padding: 0.5em 1em;
}

.h5p-standard-page-xr .h5p-standard-page-xr-element {
  padding: 0.25em 0;
}

.h5p-standard-page-xr .h5p-standard-page-xr-element:nth-of-type(2) {
  padding-top: 1em;
}

.h5p-standard-page-xr .h5p-accordion .h5p-panel-title {
  padding: 0.2em 0 0.2em 1em;
}

.h5p-standard-page-xr .h5p-accordion .h5p-panel-title::before {
  left: 0;
}

.h5p-standard-page-xr .h5p-accordion .h5p-panel-content {
  padding: 0.5em 0em 0em 1.25em;
}

.h5p-standard-page-xr .h5p-accordion .h5p-panel-button {
  padding: 0.2em 0.2em 0.2em 0;
  font-size: 16px;
  font-weight: normal;
}

.h5p-standard-page-xr .h5p-accordion .h5p-panel-button:before {
  left: 0.25em;
  font-size: 14px;
}

